# Parallel-Algos-Labset

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeCache.txt  CTestTestfile.cmake  Makefile  bfs.cpp  bfs.h  cmake_install.cmake  main.cpp  parallel_algos  quicksort.cpp  quicksort.h  utils.cpp  utils.h
tests/: bfs_ut.cpp  quicksort_ut.cpp
